--- a/core/package.json
+++ b/core/package.json
@@ -1,21 +1,28 @@
 {
-  "name": "core",
+  "name": "@nodeeweb/core",
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
   "scripts": {
     "build": "tsc --build",
-    "dev": "tsc -w",
+    "dev": "nodemon index.ts",
     "start": "node dist/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@godaddy/terminus": "^4.12.1",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "connect-busboy": "^1.0.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-sitemap-xml": "^3.0.1",
+    "js2xmlparser": "^5.0.0",
     "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "mongoose": "^7.3.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -23,7 +30,10 @@
     "sharp": "^0.32.1"
   },
   "devDependencies": {
+    "@types/connect-busboy": "^1.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
+    "@types/lodash": "^4.14.195",
     "@types/node": "^20.3.2",
     "nodemon": "^2.0.22",
     "typescript": "^5.1.6"
