--- a/core/tsconfig.json
+++ b/core/tsconfig.json
@@ -20,7 +20,8 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "esModuleInterop": true,
-    "moduleResolution" : "Node"
+    "moduleResolution" : "Node",
+    "resolveJsonModule":true
   },
   "include": ["**/*.ts"],
   "exclude": ["node_modules","**/node_modules/*","dist"]
