--- a/core/package.json
+++ b/core/package.json
@@ -14,7 +14,6 @@
     "@godaddy/terminus": "^4.12.1",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
-    "connect-busboy": "^1.0.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -24,6 +23,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mongoose": "^7.3.1",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -34,6 +34,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/lodash": "^4.14.195",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.3.2",
     "nodemon": "^2.0.22",
     "typescript": "^5.1.6"
