--- a/core/package.json
+++ b/core/package.json
@@ -30,12 +30,17 @@
     "sharp": "^0.32.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/connect-busboy": "^1.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.195",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.3.2",
+    "@types/passport": "^1.0.12",
+    "@types/passport-jwt": "^3.0.8",
+    "@types/passport-local": "^1.0.35",
     "nodemon": "^2.0.22",
     "typescript": "^5.1.6"
   }
