--- a/core/package.json
+++ b/core/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "build": "tsc --build",
     "dev": "nodemon index.ts",
+    "log": "nodemon src/core/log.ts",
     "start": "node dist/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@godaddy/terminus": "^4.12.1",
+    "@types/morgan": "^1.9.4",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
@@ -23,11 +25,13 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mongoose": "^7.3.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "sharp": "^0.32.1"
+    "sharp": "^0.32.1",
+    "winston": "^3.9.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
