add:entity handler for crud use cases

--- a/core/tsconfig.json
+++ b/core/tsconfig.json
@@ -23,6 +23,6 @@
     "moduleResolution" : "Node",
     "resolveJsonModule":true
   },
-  "include": ["**/*.ts", "src/temp/routeHandle.js"],
+  "include": ["**/*.ts", "**/*.js"],
   "exclude": ["node_modules","**/node_modules/*","dist"]
 }
