--- a/core/package.json
+++ b/core/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@godaddy/terminus": "^4.12.1",
+    "@nodeeweb/admin-build": "^0.0.2",
     "@types/morgan": "^1.9.4",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
