--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,30 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+.idea
+/.idea
+./idea
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 
-#Core
-
-## Node packages
-core/node_modules
-
-## Compiled files
-core/dist
-
-## Env
-core/.env.local
+# typescript
+*.tsbuildinfo
