--- a/admin/package.json
+++ b/admin/package.json
@@ -17,6 +17,7 @@
     "@date-io/date-fns-jalali": "^2.16.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.7.0",
     "@mui/styles": "^5.7.0",
     "@mui/x-data-grid": "^5.17.16",
@@ -28,47 +29,32 @@
     "chart.js": "^3.7.1",
     "date-fns": "^2.28.0",
     "date-fns-jalali": "^2.29.3-0",
-    "deep-equal": "^2.0.5",
-    "faker": "^6.6.6",
     "final-form": "^4.20.7",
-    "fs": "^0.0.1-security",
     "grapesjs": "^0.19.5",
     "grapesjs-preset-webpage": "^0.1.11",
     "immutability-helper": "^3.1.1",
     "jalali-moment": "^3.3.11",
-    "json-diff": "^0.7.4",
     "lodash": "^4.17.21",
     "notiflix": "^3.2.6",
-    "pure-react-carousel": "^1.28.1",
-    "qrcode": "^1.5.0",
     "ra-i18n-polyglot": "^4.0.3",
     "ra-input-rich-text": "^4.1.0",
     "ra-language-farsi": "^4.0.0",
-    "react": "^18.1.0",
+    "react": "^18.2.0",
     "react-admin": "^4.0.3",
-    "react-admin-color-input": "^3.0.0-beta.0",
     "react-admin-import-csv": "^4.0.0",
     "react-advance-jalaali-datepicker": "^1.4.0",
     "react-chartjs-2": "^4.1.0",
     "react-color": "^2.19.3",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^18.1.0",
-    "react-email-editor": "^1.6.1",
+    "react-dom": "^18.2.0",
     "react-final-form": "^6.5.9",
-    "react-input-color": "^4.0.0",
-    "react-json-view": "^1.21.3",
-    "react-page-maker": "^1.1.31",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
-    "react-router-redux": "^4.0.8",
     "react-scripts": "^5.0.1",
     "react-select": "^5.3.2",
-    "reactstrap": "^9.1.1",
     "recharts": "^2.1.9",
     "redux": "^4.2.0",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-form": "^8.3.9",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
     "shards-react": "^1.0.3",
