add github build flow (#5)
* add github build flow

* Update package.json

---------

Co-authored-by: Erfan <erfan272758@gmail.com>
Co-authored-by: Idehweb <34858656+idehweb@users.noreply.github.com>

--- a/admin/package.json
+++ b/admin/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nodeeweb-admin-panel",
   "version": "1.0.1",
-  "private": true,
   "homepage": ".",
+  "files": ["build"],
   "scripts": {
     "dev": "craco start",
     "start": "craco start",
