--- a/shop/package.json
+++ b/shop/package.json
@@ -15,11 +15,16 @@
     "@nodeeweb/core": "file:../core",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
-    "mongoose": "^7.3.1"
+    "moment": "^2.29.4",
+    "mongoose": "^7.3.1",
+    "persianjs": "^0.4.0",
+    "string-math": "^1.2.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/string-math": "^1.0.0",
     "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   }
 }
