--- a/core/package.json
+++ b/core/package.json
@@ -47,6 +47,7 @@
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
     "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   }
 }
