--- a/core/package.json
+++ b/core/package.json
@@ -21,6 +21,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.1",
     "express-sitemap-xml": "^3.0.1",
     "js2xmlparser": "^5.0.0",
     "jsonwebtoken": "^9.0.0",
