--- a/core/package.json
+++ b/core/package.json
@@ -15,11 +15,13 @@
     "@godaddy/terminus": "^4.12.1",
     "@nodeeweb/admin-build": "^0.0.2",
     "@types/morgan": "^1.9.4",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.1",
     "express-sitemap-xml": "^3.0.1",
     "js2xmlparser": "^5.0.0",
     "jsonwebtoken": "^9.0.0",
@@ -31,6 +33,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "random-number-csprng": "^1.0.2",
     "sharp": "^0.32.1",
     "winston": "^3.9.0"
   },
@@ -46,6 +49,7 @@
     "@types/passport": "^1.0.12",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-local": "^1.0.35",
+    "@types/random-number-csprng": "^1.0.0",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
