fix: temp dir ts errors

--- a/core/tsconfig.json
+++ b/core/tsconfig.json
@@ -23,6 +23,6 @@
     "moduleResolution": "Node",
     "resolveJsonModule": true
   },
-  "include": ["**/*.ts", "**/*.js"],
-  "exclude": ["node_modules", "**/node_modules/*", "dist"]
+  "include": ["**/*.ts","**/*.js"],
+  "exclude": ["node_modules", "**/node_modules/*", "dist","src/temp"]
 }
