--- a/core/compose.yml
+++ b/core/compose.yml
@@ -2,7 +2,9 @@ version: '3'
 
 services:
   core:
-    build: .
+    build:
+      context: .
+      target: nodeeweb-core:0.0.3
     container_name: nodeeweb-core
     deploy:
       replicas: 1
