--- a/shop/Dockerfile
+++ b/shop/Dockerfile
@@ -6,12 +6,12 @@ ENV EnvLoader Docker
 ENV PATH /app/node_modules/.bin:$PATH
 ENV MONGO_URL "mongodb://mongomaster:27017"
 ENV PORT 3000
-ENV DB_NAME "NodeewebCore"
+ENV DB_NAME "NodeewebShop"
 ENV LOG_TO_FILE true
 ENV ADMIN_EMAIL "admin@nodeeweb.com"
 ENV ADMIN_USERNAME "admin"
 ENV ADMIN_PASSWORD "admin"
-ENV STATIC_SERVER false
+ENV STATIC_SERVER true
 ENV SHARED_PATH ./shared
 
 # Expose All Ports
