--- a/admin/package.json
+++ b/admin/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "nodeeweb-admin-panel",
+  "name": "@nodeeweb/admin-panel",
   "version": "1.0.1",
+  "license": "MIT",
   "homepage": ".",
   "files": ["build"],
   "scripts": {
