--- a/admin/package.json
+++ b/admin/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "@date-io/date-fns-jalali": "^2.16.0",
-    "@material-ui/core": "^4.12.4",
+    "@mui/styles": "^5.14.1",
     "@mui/x-data-grid": "^5.17.16",
     "@mui/x-date-pickers": "^5.0.10",
     "@splidejs/react-splide": "^0.7.12",
