--- a/admin/package.json
+++ b/admin/package.json
@@ -52,6 +52,7 @@
     "recharts": "^2.7.2",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.2",
     "shards-react": "^1.0.3",
     "swiper": "^8.3.2"
   },
