--- a/admin/package.json
+++ b/admin/package.json
@@ -66,7 +66,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@craco/craco": "^6.4.3",
+    "@craco/craco": "^7.1.0",
+    "@craco/types": "^7.1.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "dotenv": "^16.0.1",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
