change: link into file

--- a/core/package.json
+++ b/core/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@godaddy/terminus": "^4.12.1",
-    "@nodeeweb/admin-build": "link:../admin/build",
+    "@nodeeweb/admin-build": "file:../admin/build",
     "@types/morgan": "^1.9.4",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
