--- a/shop/package.json
+++ b/shop/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@nodeeweb/core": "link:../core/dist",
+    "@nodeeweb/core": "file:../core/dist",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "moment": "^2.29.4",
