Docker shop dev (#22)
* save domain api

* update api url and fix login request

* save domain api

* update api url and fix login request

* fix: upload bugs

* implement: media endpoints

* fixed api functions and auth provider

* change media to file , implement update, delete file

* fix: core path for deploy

* fix: core types

* change: link into file

* change: admin build path

* add: remove lock files after shutdown signal

* fix: endpoints bugs

* feature: wait for parsers in crud

* fix: add product api

* edit menu items

* fixed base url and add token to each request

* edit media url and end point

* fix: admin crud

* change: sendResponse call wait

* fix: admin panel bugs

* create media link

* impelement: dev stage for dockerfile

* add: entrypoint for dev

* fix: execute command  for docker dev

* change: dev stage in compose

* fix: shop module path

* fix: dev stage workdir

* fix: accept ts files in dev mode

* fix: bind mount change follow change workdir

---------

Co-authored-by: Mohammadreza <mrhhajiyan@gmail.com>

--- a/shop/compose.yml
+++ b/shop/compose.yml
@@ -2,10 +2,11 @@ version: '3'
 
 services:
   shop:
-    image: nodeeweb-shop:0.0.1
+    image: nodeeweb-shop:dev-0.0.1
     build:
       context: ..
       dockerfile: shop/Dockerfile
+      target: dev
     container_name: nodeeweb-shop
     deploy:
       replicas: 1
@@ -23,9 +24,9 @@ services:
     env_file:
       - .env.local
     volumes:
-      - /var/instances/nwi-shop/shared:/app/shared
-      - /var/instances/nwi-shop/logs:/app/logs
-      - /var/instances/nwi-shop/public:/app/public
+      - /var/instances/nwi-shop/shared:/app/shop/shared/
+      - /var/instances/nwi-shop/logs:/app/shop/logs/
+      - /var/instances/nwi-shop/public:/app/shop/public/
 
 networks:
   mongonet:
