--- a/shop/package.json
+++ b/shop/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc --build",
     "dev": "nodemon index.ts",
+    "dev:start":"ts-node index.ts",
     "log": "nodemon src/core/log.ts",
     "start": "node dist/index.js"
   },
