--- a/core/package.json
+++ b/core/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@godaddy/terminus": "^4.12.1",
     "@nodeeweb/admin-build": "*",
+    "@nodeeweb/front-build": "file:../front/build",
     "@types/morgan": "^1.9.4",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
