--- a/.github/workflows/admin-build.yml
+++ b/.github/workflows/admin-build.yml
@@ -1,9 +1,18 @@
 name: Admin Build
 
+# on:
+#   push:
+#     branches:
+#       - releases/**
+#     paths:
+#       - 'admin/**'
+
 on:
-  push:
+  pull_request:
     branches:
-      - releases/**
+      - theme-setting
+      - main
+      - 'releases/**'
     paths:
       - 'admin/**'
 
