--- a/front/.env
+++ b/front/.env
@@ -2,4 +2,4 @@ GENERATE_SOURCEMAP=false
 REACT_APP_VERSION_NUM=1.0
 REACT_APP_BASE_URL=http://localhost:3000
 REACT_APP_SHOP_URL=http://localhost:3000/
-REACT_APP_FRONT_ROUTE=http://localhost:3000/customer
+REACT_APP_FRONT_ROUTE=http://localhost:3000
