--- a/shop/package.json
+++ b/shop/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "link:./node_modules\\@nodeeweb\\core\\node_modules\\bcrypt",
     "class-transformer": "link:./node_modules\\@nodeeweb\\core\\node_modules\\class-transformer",
     "class-validator": "link:./node_modules\\@nodeeweb\\core\\node_modules\\class-validator",
+    "loadash": "^1.0.0",
     "moment": "^2.29.4",
     "mongoose": "link:./node_modules\\@nodeeweb\\core\\node_modules\\mongoose",
     "persianjs": "^0.4.0",
