--- a/admin/.env
+++ b/admin/.env
@@ -1,3 +1,3 @@
 GENERATE_SOURCEMAP=false
 TSC_COMPILE_ON_ERROR=true
-REACT_APP_API_BASE_URL_DEV=https://shop.nodeeweb.com
+REACT_APP_API_BASE_URL_DEV=http://localhost:2759
