--- a/shop/package.json
+++ b/shop/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "build": "tsc --build",
-    "dev": "nodemon index.ts",
+    "dev": "nodemon --config nodemon.json index.ts",
     "dev:start": "ts-node index.ts",
     "log": "nodemon src/core/log.ts",
     "start": "node dist/index.js"
