implement plugin endpoints

--- a/core/plugin-market/meli-payamak-service-line-sms/config.json
+++ b/core/plugin-market/meli-payamak-service-line-sms/config.json
@@ -9,6 +9,7 @@
     "icon": "",
     "author": "Nodeeweb",
     "main":"index.ts",
+    "slug":"meli-payamak-service-line-sms",
     "add": {
         "inputs": [
             {
