--- a/core/package.json
+++ b/core/package.json
@@ -24,6 +24,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "download": "^8.0.0",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.1",
     "express-sitemap-xml": "^3.0.1",
@@ -47,6 +48,7 @@
     "@types/connect-busboy": "^1.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
+    "@types/download": "^8.0.2",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/lodash": "^4.14.195",
