--- a/shop/package.json
+++ b/shop/package.json
@@ -19,6 +19,7 @@
     "class-transformer": "link:./node_modules\\@nodeeweb\\core\\node_modules\\class-transformer",
     "class-validator": "link:./node_modules\\@nodeeweb\\core\\node_modules\\class-validator",
     "loadash": "^1.0.0",
+    "lodash": "link:./node_modules\\@nodeeweb\\core\\node_modules\\lodash",
     "moment": "^2.29.4",
     "mongoose": "link:./node_modules\\@nodeeweb\\core\\node_modules\\mongoose",
     "persianjs": "^0.4.0",
