--- a/admin/.env
+++ b/admin/.env
@@ -1,4 +1,4 @@
 GENERATE_SOURCEMAP=false
 TSC_COMPILE_ON_ERROR=true
-REACT_APP_API_BASE_URL_DEV=https://shop.nodeeweb.com
+REACT_APP_API_BASE_URL_DEV=http://127.0.0.1:2759
 NODE_ENV=development
