--- a/shop/package.json
+++ b/shop/package.json
@@ -18,7 +18,6 @@
     "bcrypt": "link:./node_modules\\@nodeeweb\\core\\node_modules\\bcrypt",
     "class-transformer": "link:./node_modules\\@nodeeweb\\core\\node_modules\\class-transformer",
     "class-validator": "link:./node_modules\\@nodeeweb\\core\\node_modules\\class-validator",
-    "loadash": "^1.0.0",
     "lodash": "link:./node_modules\\@nodeeweb\\core\\node_modules\\lodash",
     "moment": "^2.29.4",
     "mongoose": "link:./node_modules\\@nodeeweb\\core\\node_modules\\mongoose",
@@ -28,6 +27,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/lodash": "^4.14.197",
     "@types/string-math": "^1.0.0",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
