implement: zibal plugin

--- a/shop/.env
+++ b/shop/.env
@@ -10,7 +10,7 @@ ADMIN_PASSWORD="admin"
 STATIC_SERVER=true
 SHARED_PATH=./shared
 APP_NAME="Nodeeweb Shop"
-BASE_URL="shop.nodeeweb.com"
+BASE_URL="https://shop.nodeeweb.com"
 RESTART_WEBHOOK_AUTH_TOKEN='my-webhook-auth-token'
 RESTART_WEBHOOK="http://localhost:2760/restart"
 RESTART_POLICY=external
