--- a/core/.env
+++ b/core/.env
@@ -12,3 +12,4 @@ MONGO_URL="mongodb://127.0.0.1:27017"
 RESTART_WEBHOOK_AUTH_TOKEN='my-webhook-auth-token'
 RESTART_WEBHOOK="http://localhost:2760/restart"
 RESTART_POLICY=external
+MAX_NUM_OF_PROXY=0
