--- a/shop/.env
+++ b/shop/.env
@@ -14,3 +14,4 @@ BASE_URL="https://shop.nodeeweb.com"
 RESTART_WEBHOOK_AUTH_TOKEN='my-webhook-auth-token'
 RESTART_WEBHOOK="http://localhost:2760/restart"
 RESTART_POLICY=external
+MAX_NUM_OF_PROXY=0
