--- a/shop/package.json
+++ b/shop/package.json
@@ -5,6 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "build": "tsc --build",
+    "post:build":"copyfiles -F **/*.sh **/*.json dist",
     "dev": "nodemon --config nodemon.json index.ts",
     "dev:start": "ts-node index.ts",
     "log": "nodemon src/core/log.ts",
@@ -29,6 +30,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/lodash": "^4.14.197",
     "@types/string-math": "^1.0.0",
+    "copyfiles": "^2.4.1",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
