--- a/shop/compose.yml
+++ b/shop/compose.yml
@@ -2,11 +2,11 @@ version: '3'
 
 services:
   shop:
-    image: nodeeweb-shop:dev-0.0.1
+    image: nodeeweb-shop:semi-1.0.2
     build:
       context: ..
       dockerfile: shop/Dockerfile
-      target: dev
+      target: semi-pro
     container_name: nodeeweb-shop
     deploy:
       replicas: 1
